Safari365 Prod/src/objects/NTS__c.object
<CustomObject>
    <fields>
        <fullName>AGENT_CODE__c</fullName>
        <label>AGENT_CODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHD_ID__c</fullName>
        <label>BHD_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSL_ID__c</fullName>
        <label>BSL_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CATEGORY__c</fullName>
        <label>CATEGORY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGED_DATE__c</fullName>
        <label>CHANGED_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANGED_USER_NAME__c</fullName>
        <label>CHANGED_USER_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_DATE__c</fullName>
        <label>CREATED_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Lookup</label>
        <referenceTo>CRM__c</referenceTo>
        <relationshipLabel>NTSs</relationshipLabel>
        <relationshipName>NTSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MESSAGE_TEXT__c</fullName>
        <label>MESSAGE_TEXT</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NCT_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCT_Lookup</label>
        <referenceTo>NCT__c</referenceTo>
        <relationshipLabel>NTSs</relationshipLabel>
        <relationshipName>NTSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOTE_LEVEL__c</fullName>
        <label>NOTE_LEVEL</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTS_ID__c</fullName>
        <externalId>true</externalId>
        <label>NTS_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE__c</fullName>
        <label>SOURCE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIER_CODE__c</fullName>
        <label>SUPPLIER_CODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_NAME__c</fullName>
        <label>USER_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>NTS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AGENT_CODE__c</columns>
        <columns>BHD_ID__c</columns>
        <columns>BSL_ID__c</columns>
        <columns>CATEGORY__c</columns>
        <columns>CHANGED_DATE__c</columns>
        <columns>CHANGED_USER_NAME__c</columns>
        <columns>CREATED_DATE__c</columns>
        <columns>NTS_ID__c</columns>
        <columns>SOURCE__c</columns>
        <columns>SUPPLIER_CODE__c</columns>
        <columns>MESSAGE_TEXT__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NTS-{0000000}</displayFormat>
        <label>NTS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>